# kedro-mlflow

./: .envrc  README-kedro.md  README.md  pyproject.toml
conf/base/: catalog.yml
docs/source/: conf.py  index.rst
src/: setup.py
src/kedro_mlflow/: __init__.py  __main__.py  example-pipeline.py  example-pipeline2.py  example-pipeline3.py  pipeline_registry.py  settings.py
src/tests/: test_run.py
