[tool.kedro]
package_name = "kedro_mlflow"
project_name = "Kedro with MLFlow"
project_version = "0.17.5"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_third_party = "kedro"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/kedro_mlflow -ra"""

[tool.poetry]
name = "kedro_mlflow"
version = "0.1.0"
description = "Kedro with MLFlow"
authors = ["Gavin Noronha <gavinln@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipython = "^7.30.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
